--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -36,7 +36,7 @@ jobs:
       # secrets described in previous section
       - name: Login to Docker Hub
         uses: docker/login-action@v3
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/develop'
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
