--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,13 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.continue-on-error=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.sql.init.mode=always
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.username=sa
+#spring.datasource.password=
 spring.h2.console.path=/h2-console
 spring.h2.console.enabled=true
 
-spring.datasource.url=jdbc:h2:mem:pm-db
-spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:mem:pm-db
+#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.H2Dialect
 
 
 
